--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body, html, #root {
   height: 100%;
+  background-color: #fcefd8;
 }
 
 body {
@@ -9,9 +10,4 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
 }
